[package]
name = "cait-sith"
description = "Threshold ECDSA via Triples"
repository = "https://github.com/cronokirby/cait-sith"
version = "0.8.0"
edition = "2021"
license = "MIT"

[dependencies]
auto_ops = "0.3.0"
ck-meow = "0.1.0"
digest = "0.10.7"
ecdsa = { version = "0.16.8", features = ["digest", "hazmat"] }
elliptic-curve = { version = "0.13.5", features = ["serde"] }
event-listener = "2.5.3"
k256 = { version = "0.13", features = ["sha256", "ecdsa", "serde"], optional = true }
magikitten = "0.2.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.175", features = ["derive"] }
smol = "2.0.2"
subtle = "2.5.0"

[dev-dependencies]
criterion = "0.5"
easy-parallel = "3.2.0"
haisou-chan = { path = "./haisou-chan" }
clap = "4.5"
k256 = { version = "0.13", features = ["sha256", "ecdsa", "serde"], optional = false }

[[bench]]
name = "protocols"
harness = false
required-features = ["k256"]

[features]
k256 = ["dep:k256"]

[[example]]
name = "network-benches"
path = "examples/network-benches.rs"
required-features = ["k256"]
